[project]
name = "mllp-gateway"
version = "0.3.0"
description = "Standalone MLLP gateway for lab analyzer HL7 communication with CARE"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Open Healthcare Network" },
]
requires-python = ">=3.12"
dependencies = [
    "hl7>=0.4.5,<0.5",
    "aiohttp>=3.11,<4",
    "jinja2>=3.1,<4",
    "joserfc>=1.6,<2",
    "pystray>=0.19,<1",
    "Pillow>=12,<13",
    "tomli-w>=1.0,<2",
    "pyserial-asyncio>=0.6",
]

[project.scripts]
mllp-gateway = "mllp_gateway.cli:entrypoint"

[dependency-groups]
dev = [
    "pyinstaller>=6.0,<7",
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"
